--- a/NR/NRApp/templates/base.html
+++ b/NR/NRApp/templates/base.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,6 +27,7 @@
             font-size: 1rem;
             padding-left: 20px;
             padding-right: 20px;
+            color: black; /* Set the text color to black */
         }
         .navbar-nav .nav-item.active .nav-link {
             font-weight: bold;
@@ -74,10 +74,10 @@
             {% else %}
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+                        <a class="nav-link" href="{{ url_for('login') }}" style="color: black;">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('register') }}">Register</a>
+                        <a class="nav-link" href="{{ url_for('register') }}" style="color: black;">Register</a>
                     </li>
                 </ul>
             {% endif %}
@@ -91,4 +91,3 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
-```
